--- a/project_hw_barbershop/hw_38/templates/order_list.html
+++ b/project_hw_barbershop/hw_38/templates/order_list.html
@@ -1,27 +1,13 @@
-{% load static %}
-<head>
-    <meta charset="UTF-8">
-    <title>Заказы</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
-    <script src="{% static 'main.js' %}"></script>
-</head>
-<body>
-    <h1>Заказы:</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Клиент</th>
-                <th>Статус заявки</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for order in orders %}
-                <tr>
-                    <td>{{ order.client_name }}</td>
-                    <td>{{ order.status }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 class="mb-4">Список заявок</h1>
     
-</body>
+    <div class="row">
+        {% for order in orders %}
+            <div class="col-md-6 col-lg-4 mb-4">
+                {% include 'includes/order_card.html' with client_name=order.client_name date=order.date services=order.services  master_name=master.name status=order.status order_id=order.id %}
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
