--- a/project_hw_barbershop/hw_38/templates/thanks.html
+++ b/project_hw_barbershop/hw_38/templates/thanks.html
@@ -1,10 +1,27 @@
-{% load static %}
-<head>
-    <meta charset="UTF-8">
-    <title>Спасибо за заказ!</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
-    <script src="{% static 'main.js' %}"></script>
-</head>
-<body>
-    <h1>Спасибо! Ваша заявка принята!</h1>
-</body>
+{% extends 'base.html' %}
+
+{% block title %}Спасибо за заказ!{% endblock %}
+
+{% block content %}
+    <div class="text-center py-5">
+        <div class="bg-success bg-opacity-10 rounded-circle p-4 d-inline-block mb-4">
+            <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem;"></i>
+        </div>
+        
+        <h1 class="display-4 mb-3">Спасибо за заявку!</h1>
+        <p class="lead mb-4">Ваш заказ успешно принят</p>
+        
+        <div class="alert alert-info d-flex align-items-center justify-content-center mb-4" role="alert">
+            <i class="bi bi-info-circle-fill me-2"></i>
+            <div>
+                Наш администратор свяжется с вами в течение 15 минут
+            </div>
+        </div>
+        
+        <div class="mt-5 d-flex flex-wrap justify-content-center gap-3">
+            <a href="/" class="btn btn-outline-primary px-4">
+                <i class="bi bi-house me-1"></i>На главную
+            </a>
+        </div>
+    </div>
+{% endblock %}
