--- a/project_hw_barbershop/hw_38/templates/base.html
+++ b/project_hw_barbershop/hw_38/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="барбершоп, стрижка, борода, мужской уход, Стальная Борода">
     
     <!-- Заголовок страницы -->
-    <title>{% block title %}Барбершоп "Стальная Борода"{% endblock %}</title>
+    <title>{% block title %}Барбершоп "Лысина"{% endblock %}</title>
     
     <!-- Подключения стилей -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
