hw_44: Выполненное домашнее задание №44

--- a/project_hw_barbershop/hw_38/templates/includes/menu.html
+++ b/project_hw_barbershop/hw_38/templates/includes/menu.html
@@ -25,6 +25,16 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_order' %}">
+                        <i class="bi bi-scissors me-1"></i>Записаться
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_review' %}">
+                        <i class="bi bi-scissors me-1"></i>Написать отзыв
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#about">
                         <i class="bi bi-telephone me-1"></i>Контакты
                     </a>
